--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>This is my workspace...</h1>
+    <h2><a href="./01.01.22/index.html">01.01.22</a></h2>
   </body>
 </html>
