--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>This is my workspace...</h1>
-    <h2><a href="./01.01.22/index.html">01.01.22</a></h2>
+    <div>
+      <a href="./01.01.22/description.html"
+        >Project 01 - The Shopping Cart Page (01.01.22)</a
+      >
+    </div>
   </body>
 </html>
