--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <title>My Workspace</title>
   </head>
   <body>
-    <h1>This is my workspace...</h1>
+    <h1>My Dev Diary</h1>
     <div>
-      <a href="./01.01.22/description.html"
-        >Project 01 - The Shopping Cart Page (01.01.22)</a
-      >
+      <a href="./my_dev_diary/01.01.22/description.html">Day 1 - 01.01.22 </a>
     </div>
   </body>
 </html>
