--- a/my_dev_diary/01.06.22/description.html
+++ b/my_dev_diary/01.06.22/description.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Workspace</title>
+    <title>02.06.22</title>
   </head>
   <body>
-    <h1>Day 1 - 01.06.22</h1>
+    <h1>01.06.22</h1>
     <p>
       I'm working on the shopping cart page today.
       <br />
