--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>My Workspace</title>
   </head>
   <body>
     <h1>My Dev Diary</h1>
-    <div>
-      <a href="./my_dev_diary/01.06.22/description.html">Day 1 - 01.06.22 </a>
-    </div>
+    <table>
+      <tr>
+        <th>Number</th>
+        <th>Date</th>
+        <th>Total Hours</th>
+        <th>Total Projects</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td><a href="/my_dev_diary/01.06.22/description.html">01.06.22</a></td>
+        <td>6</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td><a href="/my_dev_diary/02.06.22/description.html">02.06.22</a></td>
+        <td>-</td>
+        <td>-</td>
+      </tr>
+    </table>
   </body>
 </html>
