--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
       <tr>
         <th>Number</th>
         <th>Date</th>
+        <th>Descriptions</th>
         <th>Total Hours</th>
         <th>Total Projects</th>
       </tr>
       <tr>
         <td>1</td>
-        <td><a href="/my_dev_diary/01.06.22/description.html">01.06.22</a></td>
+        <td>01.06.22</td>
+        <td>
+          <a href="/my_dev_diary/01.06.22/description.html">Descriptions</a>
+        </td>
         <td>6</td>
         <td>-</td>
       </tr>
       <tr>
         <td>2</td>
-        <td><a href="/my_dev_diary/02.06.22/description.html">02.06.22</a></td>
+        <td>02.06.22</td>
+        <td>
+          <a href="/my_dev_diary/02.06.22/description.html">Descriptions</a>
+        </td>
         <td>-</td>
         <td>-</td>
       </tr>
