--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
   </head>
   <body>
     <h1>My Dev Diary</h1>
-    <h3>My Notes</h3>
-    <p>
-      <a
-        href="/Notes/HTML/HMTL - TUM NOTLAR b745fd6bee7047e58680a967ea4429cc.html"
-        >HTML</a
-      >
-      <a
-        href="/Notes/CSS 1-6/CSS - TUM NOTLAR ec7e9c3f78164eedbffd7a6d479ff9fc.html"
-        >CSS</a
-      >
-    </p>
+    <h3><a href="/Notes/notes.html">My Notes</a></h3>
     <table>
       <tr>
         <th>Number</th>
